--- a/src/components/list/EventList.scss
+++ b/src/components/list/EventList.scss
@@ -1,6 +1,7 @@
 .event-list {
-  width: 100vw;
-  margin: 1em auto;
+  width: 99vw;
+  padding-top: 3em;
+  padding-bottom: 12em;
 
   display: flex;
   flex-direction: column;
